--- a/softprojector.qrc
+++ b/softprojector.qrc
@@ -1,104 +1,106 @@
 <RCC>
-  <qresource prefix="/icons">
-    <file>icons/effectsBlurredShadow.png</file>
-    <file>icons/effectsNone.png</file>
-    <file>icons/effectsShadow.png</file>
-    <file>icons/add.png</file>
-    <file>icons/solidColor.png</file>
-    <file>icons/add_songbook.png</file>
-    <file>icons/announce.png</file>
-    <file>icons/announce_copy.png</file>
-    <file>icons/announce_delete.png</file>
-    <file>icons/announce_edit.png</file>
-    <file>icons/announce_new.png</file>
-    <file>icons/base-22x22-actions-application-exit.png</file>
-    <file>icons/bibleHistoryDelete.png</file>
-    <file>icons/book.png</file>
-    <file>icons/clear.png</file>
-    <file>icons/controlExit.png</file>
-    <file>icons/controlExitHovered.png</file>
-    <file>icons/controlExitPressed.png</file>
-    <file>icons/controlNext.png</file>
-    <file>icons/controlNextHovered.png</file>
-    <file>icons/controlNextPressed.png</file>
-    <file>icons/controlPrev.png</file>
-    <file>icons/controlPrevHovered.png</file>
-    <file>icons/controlPrevPressed.png</file>
-    <file>icons/database.png</file>
-    <file>icons/display.png</file>
-    <file>icons/display_off.png</file>
-    <file>icons/display_on.png</file>
-    <file>icons/down.png</file>
-    <file>icons/edit.png</file>
-    <file>icons/ExpandSmall.png</file>
-    <file>icons/FitToScreen.png</file>
-    <file>icons/FitToScreenByExpanding.png</file>
-    <file>icons/flag_uk.png</file>
-    <file>icons/go_live.png</file>
-    <file>icons/help.png</file>
-    <file>icons/hide.png</file>
-    <file>icons/new.png</file>
-    <file>icons/open.png</file>
-    <file>icons/pause.png</file>
-    <file>icons/photo.png</file>
-    <file>icons/play.png</file>
-    <file>icons/playerScreen.png</file>
-    <file>icons/print.png</file>
-    <file>icons/remove.png</file>
-    <file>icons/remove_all.png</file>
-    <file>icons/save.png</file>
-    <file>icons/scheduleAdd.png</file>
-    <file>icons/scheduleClear.png</file>
-    <file>icons/scheduleDown.png</file>
-    <file>icons/scheduleDownM.png</file>
-    <file>icons/scheduleNew.png</file>
-    <file>icons/scheduleOpen.png</file>
-    <file>icons/scheduleRemove.png</file>
-    <file>icons/scheduleSave.png</file>
-    <file>icons/scheduleUp.png</file>
-    <file>icons/scheduleUpM.png</file>
-    <file>icons/screen.png</file>
-    <file>icons/search.png</file>
-    <file>icons/settings.png</file>
-    <file>icons/show.png</file>
-    <file>icons/slideshow_delete.png</file>
-    <file>icons/slideshow_edit.png</file>
-    <file>icons/slideshow_new.png</file>
-    <file>icons/softprojector.png</file>
-    <file>icons/softprojector_cloud.png</file>
-    <file>icons/song_copy.png</file>
-    <file>icons/song_count.png</file>
-    <file>icons/song_delete.png</file>
-    <file>icons/song_edit.png</file>
-    <file>icons/song_new.png</file>
-    <file>icons/song_tab.png</file>
-    <file>icons/splash.png</file>
-    <file>icons/stop.png</file>
-    <file>icons/up.png</file>
-    <file>icons/video.png</file>
-    <file>icons/video_add.png</file>
-    <file>icons/video_remove.png</file>
-    <file>icons/alingBottom.png</file>
-    <file>icons/alingCenter.png</file>
-    <file>icons/alingLeft.png</file>
-    <file>icons/alingMiddle.png</file>
-    <file>icons/alingRight.png</file>
-    <file>icons/alingTop.png</file>
-    <file>icons/tranFade.png</file>
-    <file>icons/tranFadeOutIn.png</file>
-    <file>icons/tranMoveDown.png</file>
-    <file>icons/tranMoveLeft.png</file>
-    <file>icons/aboveText.png</file>
-    <file>icons/belowText.png</file>
-    <file>icons/bottomOfScreen.png</file>
-    <file>icons/toBottomOfScreen.png</file>
-    <file>icons/toTopOfScreen.png</file>
-    <file>icons/common.png</file>
-    <file>icons/tranMoveRight.png</file>
-    <file>icons/tranMoveUp.png</file>
-    <file>icons/tranNone.png</file>
-  </qresource>
-  <qresource prefix="/">
-    <file>DisplayArea.qml</file>
-  </qresource>
+    <qresource prefix="/icons">
+        <file>icons/effectsBlurredShadow.png</file>
+        <file>icons/effectsNone.png</file>
+        <file>icons/effectsShadow.png</file>
+        <file>icons/add.png</file>
+        <file>icons/solidColor.png</file>
+        <file>icons/add_songbook.png</file>
+        <file>icons/announce.png</file>
+        <file>icons/announce_copy.png</file>
+        <file>icons/announce_delete.png</file>
+        <file>icons/announce_edit.png</file>
+        <file>icons/announce_new.png</file>
+        <file>icons/base-22x22-actions-application-exit.png</file>
+        <file>icons/bibleHistoryDelete.png</file>
+        <file>icons/book.png</file>
+        <file>icons/clear.png</file>
+        <file>icons/controlExit.png</file>
+        <file>icons/controlExitHovered.png</file>
+        <file>icons/controlExitPressed.png</file>
+        <file>icons/controlNext.png</file>
+        <file>icons/controlNextHovered.png</file>
+        <file>icons/controlNextPressed.png</file>
+        <file>icons/controlPrev.png</file>
+        <file>icons/controlPrevHovered.png</file>
+        <file>icons/controlPrevPressed.png</file>
+        <file>icons/database.png</file>
+        <file>icons/display.png</file>
+        <file>icons/display_off.png</file>
+        <file>icons/display_on.png</file>
+        <file>icons/down.png</file>
+        <file>icons/edit.png</file>
+        <file>icons/ExpandSmall.png</file>
+        <file>icons/FitToScreen.png</file>
+        <file>icons/FitToScreenByExpanding.png</file>
+        <file>icons/flag_uk.png</file>
+        <file>icons/go_live.png</file>
+        <file>icons/help.png</file>
+        <file>icons/hide.png</file>
+        <file>icons/new.png</file>
+        <file>icons/open.png</file>
+        <file>icons/pause.png</file>
+        <file>icons/photo.png</file>
+        <file>icons/play.png</file>
+        <file>icons/playerScreen.png</file>
+        <file>icons/print.png</file>
+        <file>icons/remove.png</file>
+        <file>icons/remove_all.png</file>
+        <file>icons/save.png</file>
+        <file>icons/scheduleAdd.png</file>
+        <file>icons/scheduleClear.png</file>
+        <file>icons/scheduleDown.png</file>
+        <file>icons/scheduleDownM.png</file>
+        <file>icons/scheduleNew.png</file>
+        <file>icons/scheduleOpen.png</file>
+        <file>icons/scheduleRemove.png</file>
+        <file>icons/scheduleSave.png</file>
+        <file>icons/scheduleUp.png</file>
+        <file>icons/scheduleUpM.png</file>
+        <file>icons/screen.png</file>
+        <file>icons/search.png</file>
+        <file>icons/settings.png</file>
+        <file>icons/show.png</file>
+        <file>icons/slideshow_delete.png</file>
+        <file>icons/slideshow_edit.png</file>
+        <file>icons/slideshow_new.png</file>
+        <file>icons/softprojector.png</file>
+        <file>icons/softprojector_cloud.png</file>
+        <file>icons/song_copy.png</file>
+        <file>icons/song_count.png</file>
+        <file>icons/song_delete.png</file>
+        <file>icons/song_edit.png</file>
+        <file>icons/song_new.png</file>
+        <file>icons/song_tab.png</file>
+        <file>icons/splash.png</file>
+        <file>icons/stop.png</file>
+        <file>icons/up.png</file>
+        <file>icons/video.png</file>
+        <file>icons/video_add.png</file>
+        <file>icons/video_remove.png</file>
+        <file>icons/alingBottom.png</file>
+        <file>icons/alingCenter.png</file>
+        <file>icons/alingLeft.png</file>
+        <file>icons/alingMiddle.png</file>
+        <file>icons/alingRight.png</file>
+        <file>icons/alingTop.png</file>
+        <file>icons/tranFade.png</file>
+        <file>icons/tranFadeOutIn.png</file>
+        <file>icons/tranMoveDown.png</file>
+        <file>icons/tranMoveLeft.png</file>
+        <file>icons/aboveText.png</file>
+        <file>icons/belowText.png</file>
+        <file>icons/bottomOfScreen.png</file>
+        <file>icons/toBottomOfScreen.png</file>
+        <file>icons/toTopOfScreen.png</file>
+        <file>icons/common.png</file>
+        <file>icons/tranMoveRight.png</file>
+        <file>icons/tranMoveUp.png</file>
+        <file>icons/tranNone.png</file>
+        <file>icons/speaker.png</file>
+        <file>icons/speakerMute.png</file>
+    </qresource>
+    <qresource prefix="/">
+        <file>DisplayArea.qml</file>
+    </qresource>
 </RCC>
